# linux-kernel-ai-data

./: .gitignore  FINETUNING_SETUP.md  FINETUNING_WINDOWS.md  HUGGINGFACE_GUIDE.md  README.md  docker-compose.yml  extraction_checkpoint.json  extraction_status.json  pyproject.toml  requirements.txt
config/: __init__.py  constants.py  settings.py
configs/: axolotl_kernel.yaml
docs/: FINETUNING_GUIDE.md
notebooks/: finetune_kernel_reviewer.ipynb  finetune_kernel_reviewer_robust.ipynb
schema/: clickhouse.sql
scripts/: add_reason_column.py  analyze_extraction.py  augment_synthetic_data.py  benchmark_models.py  build_author_expertise.py  build_commit_chains.py  calculate_scores.py  check_db_content.py  check_files_per_commit.py  check_score_dist.py  classify_commits.py  debug_commits.py  export_all_tiers.py  export_batch.py  export_huggingface.py  export_production.py  export_reviewer_training.py  export_specialized.py  export_training_data.py  finetune_reviewer.py  finetune_reviewer_windows.py  init_db.py  migrate_db.py  prepare_huggingface.py  review_scores.py  review_smart_context.py  run_extraction.py  score_commits.py  show_ai_reasons.py  show_entry.py  show_full_examples.py  show_samples.py  show_stats.py  show_training_data.py  test_extraction.py  test_improved_scoring.py  test_model.py  train.ps1  train.sh  train_model.py  (+4 more)
src/: __init__.py  context_extractor.py  exporter.py  extractor.py  pipeline.py  quality_scorer.py  repository.py  validator.py  writer.py
tests/: test_extractor.py  test_quality_scorer.py
training/: TRAINING_GUIDE.md  axolotl_config.yaml  axolotl_config_7b.yaml  axolotl_qwen.yaml
(+1 files in other folders)
