[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-kernel-ai-data"
version = "0.1.0"
description = "Extract Linux kernel commit history for LLM training"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Linux Kernel AI Team"}
]
keywords = ["linux", "kernel", "git", "llm", "training", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pygit2>=1.13.0",
    "clickhouse-driver>=0.2.6",
    "clickhouse-connect>=0.7.0",
    "tqdm>=4.66.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "rich>=13.7.0",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/linux-kernel-ai-data"
Repository = "https://github.com/YOUR_USERNAME/linux-kernel-ai-data.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
